--- a/ATISMobile/ATISMobile/MenuPage.xaml
+++ b/ATISMobile/ATISMobile/MenuPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ATISMobile.MenuPage"
              BackgroundColor="White"
-             BackgroundImage="@drawable/CDark">
+             BackgroundImage="@drawable/TruckNewLightDark">
     <NavigationPage.TitleView>
         <StackLayout >
             <Label Text="سامانه اطلاع رسانی بار آتیس - استان اصفهان" TextColor="White" HorizontalTextAlignment="Center">
