--- a/ATISMobile/ATISMobile/AdvertisingManagement/AdvertisingPage.xaml
+++ b/ATISMobile/ATISMobile/AdvertisingManagement/AdvertisingPage.xaml
@@ -19,11 +19,9 @@
 
     <ContentPage.Content>
         <ScrollView>
-            <StackLayout >
-                <Grid VerticalOptions="Start">
-                    <Image x:Name="ImgAdvertising" Aspect="AspectFill"  Source="TruckNewLightDark.jpg" VerticalOptions="FillAndExpand"   HorizontalOptions="FillAndExpand"  />
-                </Grid>
-                <StackLayout  Margin="30,0,30,20" HorizontalOptions="CenterAndExpand" VerticalOptions="EndAndExpand">
+            <StackLayout  BackgroundColor="White">
+                <Image x:Name="ImgAdvertising"  Aspect="Fill"   Source="TruckNewLightDark.jpg" VerticalOptions="FillAndExpand"   HorizontalOptions="FillAndExpand"  />
+                <StackLayout  Margin="30,0,30,20" HorizontalOptions="CenterAndExpand" VerticalOptions="End">
                     <Button x:Name="BtnDownloadATISMobileLastVersion" BorderWidth="1" BorderColor="Black"  CornerRadius="10" FontSize="Medium" TextColor="White" BackgroundColor="DodgerBlue" Text="دانلود آخرین نسخه آتیس موبایل" >
                         <Button.FontFamily>
                             <OnPlatform x:TypeArguments="x:String">
@@ -35,7 +33,7 @@
                     </Button>
                 </StackLayout>
                 <StackLayout VerticalOptions="End" Margin="10,0,10,0">
-                    <Label TextColor="Green" Margin="20,0,20,0" FontSize="Medium"  Text="برای عضویت در گروه واتساپ آتیس موبایل فقط یکی از تصاویر زیر را لمس کنید" BackgroundColor="White" VerticalOptions="EndAndExpand" HorizontalOptions="CenterAndExpand">
+                    <Label TextColor="Green" Margin="20,0,20,0" FontSize="Medium"  Text="برای عضویت در گروه واتساپ آتیس موبایل فقط یکی از تصاویر زیر را لمس کنید" BackgroundColor="White" VerticalOptions="End" HorizontalOptions="CenterAndExpand">
                         <Label.FontFamily>
                             <OnPlatform x:TypeArguments="x:String">
                                 <On Platform="iOS" Value="Samim" />
@@ -46,7 +44,7 @@
                     </Label>
                     <Grid  x:Name="_GridWhatsApp" BackgroundColor="Transparent" HorizontalOptions="CenterAndExpand" VerticalOptions="End" >
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="*" />
+                            <RowDefinition Height="100" />
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
@@ -57,22 +55,22 @@
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
                         <StackLayout Grid.Row="0" Grid.Column="0" BackgroundColor="White"  >
-                            <ImageButton x:Name="ImgWhatsAppGroup1" Source="ATISWhatsAppGroupsIcon.jpg"  BackgroundColor="Transparent" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"  />
+                            <ImageButton x:Name="ImgWhatsAppGroup1" Source="ATISWhatsAppGroupsIcon.jpg"  BackgroundColor="Transparent" HorizontalOptions="CenterAndExpand" VerticalOptions="End"  />
                         </StackLayout>
                         <StackLayout Grid.Row="0" Grid.Column="1" BackgroundColor="White"  >
-                            <ImageButton  x:Name="ImgWhatsAppGroup2" Source="ATISWhatsAppGroupsIcon.jpg"  BackgroundColor="Transparent" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"  />
+                            <ImageButton  x:Name="ImgWhatsAppGroup2" Source="ATISWhatsAppGroupsIcon.jpg"  BackgroundColor="Transparent" HorizontalOptions="CenterAndExpand" VerticalOptions="End"  />
                         </StackLayout>
                         <StackLayout Grid.Row="0" Grid.Column="2" BackgroundColor="White"  >
-                            <ImageButton  x:Name="ImgWhatsAppGroup3" Source="ATISWhatsAppGroupsIcon.jpg"  BackgroundColor="Transparent" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"  />
+                            <ImageButton  x:Name="ImgWhatsAppGroup3" Source="ATISWhatsAppGroupsIcon.jpg"  BackgroundColor="Transparent" HorizontalOptions="CenterAndExpand" VerticalOptions="End"  />
                         </StackLayout>
                         <StackLayout Grid.Row="0" Grid.Column="3" BackgroundColor="White"  >
-                            <ImageButton  x:Name="ImgWhatsAppGroup4" Source="ATISWhatsAppGroupsIcon.jpg"  BackgroundColor="Transparent" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"  />
+                            <ImageButton  x:Name="ImgWhatsAppGroup4" Source="ATISWhatsAppGroupsIcon.jpg"  BackgroundColor="Transparent" HorizontalOptions="CenterAndExpand" VerticalOptions="End"  />
                         </StackLayout>
                         <StackLayout Grid.Row="0" Grid.Column="4" BackgroundColor="White"  >
-                            <ImageButton  x:Name="ImgWhatsAppGroup5" Source="ATISWhatsAppGroupsIcon.jpg"  BackgroundColor="Transparent" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"  />
+                            <ImageButton  x:Name="ImgWhatsAppGroup5" Source="ATISWhatsAppGroupsIcon.jpg"  BackgroundColor="Transparent" HorizontalOptions="CenterAndExpand" VerticalOptions="End"  />
                         </StackLayout>
                         <StackLayout Grid.Row="0" Grid.Column="5" BackgroundColor="White"  >
-                            <ImageButton  x:Name="ImgWhatsAppGroup6" Source="ATISWhatsAppGroupsIcon.jpg"  BackgroundColor="Transparent" HorizontalOptions="CenterAndExpand"  VerticalOptions="CenterAndExpand"  />
+                            <ImageButton  x:Name="ImgWhatsAppGroup6" Source="ATISWhatsAppGroupsIcon.jpg"  BackgroundColor="Transparent" HorizontalOptions="CenterAndExpand"  VerticalOptions="End"  />
                         </StackLayout>
                     </Grid>
                 </StackLayout>
